--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,19 +6,20 @@ package:
 
 source:
   fn: jasper-{{ version }}.tar.gz
-  url: http://www.ece.uvic.ca/~frodo/jasper/software/jasper-{{ version }}.tar.gz
+  url: https://ftp.osuosl.org/pub/blfs/conglomeration/jasper/jasper-{{ version }}.tar.gz
   sha256: 2a1f61e55afe8b4ce8115e1508c5d7cb314d56dfcc2dd323f90c072f88ccf57b
   patches:
     - CVE-2018-9055-330751ce.patch
 
 build:
-  number: 1
-  skip: True  # [win]
+  number: 2
   run_exports:
     # no info.  Leaving at default behavior.
     - {{ pin_subpackage('jasper') }}
   missing_dso_whitelist:                                         # [osx]
     - /System/Library/Frameworks/GLUT.framework/Versions/A/GLUT  # [osx]
+  ignore_run_exports:
+    - jpeg
 
 requirements:
   build:
@@ -34,20 +35,22 @@ requirements:
     - {{ cdt('libxi') }}                # [linux]
     - {{ cdt('libxxf86vm') }}           # [linux]
     - cmake
-    - make
+    - make                              # [not win]
+    - patch                             # [not win]
+    - m2-patch                          # [win]
   host:
     - jpeg
     - libglu                            # [linux]
-    - freeglut                          # [linux]
+    - freeglut                          # [linux or win]
   run:
+    - jpeg
     - {{ pin_compatible('libglu') }}    # [linux]
-    - {{ pin_compatible('freeglut') }}  # [linux]
+    - {{ pin_compatible('freeglut') }}  # [linux or win]
 
 test:
   commands:
+    - if not exist %LIBRARY_BIN%\\jasper.dll exit 1  # [win]
     - jasper --version
-    - conda inspect linkages -p $PREFIX jasper  # [not win]
-    - conda inspect objects -p $PREFIX jasper  # [osx]
 
 about:
   home: http://www.ece.uvic.ca/~frodo/jasper/
