--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,19 +1,17 @@
-{% set version = "2.0.14" %}
+{% set name = "jasper" %}
+{% set version = "4.2.3" %}
 
 package:
-  name: jasper
+  name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: jasper-{{ version }}.tar.gz
-  url: https://ftp.osuosl.org/pub/blfs/conglomeration/jasper/jasper-{{ version }}.tar.gz
-  sha256: 2a1f61e55afe8b4ce8115e1508c5d7cb314d56dfcc2dd323f90c072f88ccf57b
-  patches:
-    - CVE-2018-9055-330751ce.patch
+  url: https://ftp2.osuosl.org/pub/blfs/conglomeration/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 1263d70c663f1b5a4ed2a428371486091d282af96b7270e8b1cbfcbf44ad95ff
 
 build:
-  number: 2
-  skip: True  # [s390x]
+  number: 0
+  skip: true  # [s390x]
   run_exports:
     # no info.  Leaving at default behavior.
     - {{ pin_subpackage('jasper') }}
@@ -23,7 +21,6 @@ build:
     - $RPATH/libc.so.6  # [linux]
   ignore_run_exports:
     - jpeg
-    - pcre  # [ppc64le]
 
 requirements:
   build:
@@ -38,8 +35,8 @@ requirements:
     - {{ cdt('libxau') }}               # [linux]
     - {{ cdt('libxi') }}                # [linux]
     - {{ cdt('libxxf86vm') }}           # [linux]
-    - {{ cdt('libxshmfence-devel') }}    # [linux and ppc64le]
     - cmake
+    - ninja                             # [win]
     - make                              # [not win]
     - patch                             # [not win]
     - m2-patch                          # [win]
@@ -47,10 +44,9 @@ requirements:
     - jpeg
     - libglu                            # [linux]
     - freeglut                          # [linux or win]
-    - pcre  # [ppc64le]
+    - zstd                              # [osx]
   run:
     - jpeg
-    - pcre  # [ppc64le]
     - {{ pin_compatible('libglu') }}    # [linux]
     - {{ pin_compatible('freeglut') }}  # [linux or win]
 
@@ -60,11 +56,16 @@ test:
     - jasper --version
 
 about:
-  home: http://www.ece.uvic.ca/~frodo/jasper/
-  dev_url: https://github.com/mdadams/jasper
-  license: JasPer 2.0
-  license_file: LICENSE
-  summary: 'A reference implementation of the codec specified in the JPEG-2000 Part-1 standard.'
+  home: https://www.ece.uvic.ca/~frodo/jasper/
+  dev_url: https://github.com/jasper-software/jasper
+  doc_url: https://www.ece.uvic.ca/~frodo/jasper/
+  license: JasPer-2.0
+  license_file: LICENSE.txt
+  summary: A reference implementation of the codec specified in the JPEG-2000 Part-1 standard.
+  description: |
+    The JasPer Project is an open-source initiative to provide
+    a free software-based reference implementation of the codec specified
+    in the JPEG-2000 Part-1 standard (i.e., ISO/IEC 15444-1).
 
 extra:
   recipe-maintainers:
