--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,8 +38,6 @@ requirements:
     - cmake
     - ninja                             # [win]
     - make                              # [not win]
-    - patch                             # [not win]
-    - m2-patch                          # [win]
   host:
     - jpeg
     - libglu                            # [linux]
@@ -59,6 +57,7 @@ about:
   dev_url: https://github.com/jasper-software/jasper
   doc_url: https://www.ece.uvic.ca/~frodo/jasper/
   license: JasPer-2.0
+  license_family: Other
   license_file: LICENSE.txt
   summary: A reference implementation of the codec specified in the JPEG-2000 Part-1 standard.
   description: |
