--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ requirements:
     - libglu 9.0.0                     # [linux]
     - freeglut 3.0.0                    # [linux or win]
   run:
-    - jpeg
+    - jpeg # pin through run_exports
     - {{ pin_compatible('libglu') }}    # [linux]
     - {{ pin_compatible('freeglut') }}  # [linux or win]
 
