--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -53,7 +53,7 @@ test:
 about:
   home: https://www.ece.uvic.ca/~frodo/jasper/
   dev_url: https://github.com/jasper-software/jasper
-  doc_url: https://www.ece.uvic.ca/~frodo/jasper/
+  doc_url: https://jasper-software.github.io/jasper-manual/latest/html/index.html
   license: JasPer-2.0
   license_family: Other
   license_file: LICENSE.txt
