--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,8 +17,6 @@ build:
     - {{ pin_subpackage('jasper') }}
   missing_dso_whitelist:                                         # [osx or linux]
     - /System/Library/Frameworks/GLUT.framework/Versions/A/GLUT  # [osx]
-    - $RPATH/libm.so.6  # [linux]
-    - $RPATH/libc.so.6  # [linux]
 
 requirements:
   build:
@@ -36,11 +34,11 @@ requirements:
     - cmake
     - ninja
   host:
-    - jpeg {{ jpeg }}
+    - libjpeg-turbo 2
     - libglu 9.0.0                      # [linux]
     - freeglut 3.0.0                    # [linux or win]
   run:
-    - jpeg # pin through run_exports
+    - libjpeg-turbo >=2.0.0,<3.0a0
     - {{ pin_compatible('libglu') }}    # [linux]
     - {{ pin_compatible('freeglut') }}  # [linux or win]
 
