--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - {{ cdt('libxi') }}                # [linux]
     - {{ cdt('libxxf86vm') }}           # [linux]
     - cmake
-    - ninja
+    - ninja-base
   host:
     - jpeg {{ jpeg }}
     - libglu 9.0.0                      # [linux]
