--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,8 +52,10 @@ test:
     - if not exist %LIBRARY_LIB%\\pkgconfig\\jasper.pc exit 1  # [win]
     - if not exist %LIBRARY_LIB%\\jasper.lib exit 1            # [win]
     - if not exist %LIBRARY_INC%\\jasper\\jasper.h exit 1      # [win]
-    - test -f $PREFIX/include/jasper.h                         # [osx]
+    - test -f $PREFIX/include/jasper.h                         # [unix]
     - test -f $PREFIX/lib/libjasper.dylib                      # [osx]
+    - test -f $PREFIX/lib/libjasper.7.dylib                    # [osx]
+    - test -f $PREFIX/lib/libjasper.7.0.0.dylib                # [osx]
     - test -f $PREFIX/lib/libjasper.so                         # [linux]
     - test -f $PREFIX/lib/libjasper.so.7                       # [linux]
     - test -f $PREFIX/lib/libjasper.so.7.0.0                   # [linux]
