--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,9 +6,9 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/jasper-software/jasper/releases/download/version-{{ version }}/jasper-{{ version }}.tar.gz
+  url: https://github.com/jasper-software/{{ name }}/releases/download/version-{{ version }}/{{ name }}-{{ version }}.tar.gz
   sha256: 68131ddf9f62d6944cc4c58977dd177c283adb0228140b76382a2dbdadadaa4f
-  patches:  # [win]
+  patches:                  # [win]
     # Disable check_include_files(GL/glut.h JAS_HAVE_GL_GLUT_H)
     # and set JAS_HAVE_GL_GLUT_H to 1. This helps pkg-config to find
     # freeglut.lib's copies glut.lib and freeglutd.lib
