--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,12 +10,11 @@ source:
   sha256: 6a597613d8d84c500b5b83bf0eec06cd3707c23d19957f70354ac2394c9914e7
 
 build:
-  number: 2
-  skip: true  # [s390x]
+  number: 1
   run_exports:
     # no info.  Leaving at default behavior.
     - {{ pin_subpackage('jasper') }}
-  missing_dso_whitelist:  # [osx]
+  missing_dso_whitelist:                                         # [osx]
     - /System/Library/Frameworks/GLUT.framework/Versions/A/GLUT  # [osx]
 
 requirements:
@@ -32,39 +31,39 @@ requirements:
     - pkg-config
   host:
     - jpeg {{ jpeg }}
-    - libglu 9.0.0  # [linux]
-    - freeglut 3.4.0  # [linux or win]
-    - libgl-devel
-    - mesa-dri-drivers
-    - xorg-libxdamage
-    - xorg-libxext
-    - xorg-libxfixes
-    - libxcb
-    - xorg-libxxf86vm
+    - libglu 9.0.0                      # [linux]
+    - freeglut 3.4.0                    # [linux or win]
+    - libgl-devel                       # [linux]
+    - mesalib                           # [linux]
+    - xorg-libxdamage                   # [linux]
+    - xorg-libxext                      # [linux]
+    - xorg-libxfixes                    # [linux]
+    - libxcb                            # [linux]
+    - xorg-libxxf86vm                   # [linux]
   run:
     - jpeg  # pin through run_exports
-    - {{ pin_compatible('libglu') }}  # [linux]
+    - {{ pin_compatible('libglu') }}    # [linux]
     - {{ pin_compatible('freeglut') }}  # [linux or win]
 
 test:
   commands:
-    - if not exist %LIBRARY_BIN%\\jasper.dll exit 1  # [win]
-    - if not exist %LIBRARY_BIN%\\jasper.exe exit 1  # [win]
-    - if not exist %LIBRARY_BIN%\\jiv.exe exit 1  # [win]
+    - if not exist %LIBRARY_BIN%\\jasper.dll exit 1            # [win]
+    - if not exist %LIBRARY_BIN%\\jasper.exe exit 1            # [win]
+    - if not exist %LIBRARY_BIN%\\jiv.exe exit 1               # [win]
     - if not exist %LIBRARY_LIB%\\pkgconfig\\jasper.pc exit 1  # [win]
-    - if not exist %LIBRARY_LIB%\\jasper.lib exit 1  # [win]
-    - if not exist %LIBRARY_LIB%\\glut.lib exit 1  # [win]
-    - if not exist %LIBRARY_INC%\\jasper\\jasper.h exit 1  # [win]
-    - test -f $PREFIX/include/jasper/jasper.h  # [unix]
-    - test -f $PREFIX/lib/libjasper.dylib  # [osx]
-    - test -f $PREFIX/lib/libjasper.7.dylib  # [osx]
-    - test -f $PREFIX/lib/libjasper.7.0.0.dylib  # [osx]
-    - test -f $PREFIX/lib/libjasper.so  # [linux]
-    - test -f $PREFIX/lib/libjasper.so.7  # [linux]
-    - test -f $PREFIX/lib/libjasper.so.7.0.0  # [linux]
+    - if not exist %LIBRARY_LIB%\\jasper.lib exit 1            # [win]
+    - if not exist %LIBRARY_LIB%\\glut.lib exit 1              # [win]
+    - if not exist %LIBRARY_INC%\\jasper\\jasper.h exit 1      # [win]
+    - test -f $PREFIX/include/jasper/jasper.h                  # [unix]
+    - test -f $PREFIX/lib/libjasper.dylib                      # [osx]
+    - test -f $PREFIX/lib/libjasper.7.dylib                    # [osx]
+    - test -f $PREFIX/lib/libjasper.7.0.0.dylib                # [osx]
+    - test -f $PREFIX/lib/libjasper.so                         # [linux]
+    - test -f $PREFIX/lib/libjasper.so.7                       # [linux]
+    - test -f $PREFIX/lib/libjasper.so.7.0.0                   # [linux]
     - jasper --version
     # Skip running jiv on linux platforms because freeglut fails to open display
-    - jiv --version  # [win]
+    - jiv --version                                            # [win]
 
 about:
   home: https://www.ece.uvic.ca/~frodo/jasper/
