--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,7 @@ source:
   sha256: 6a597613d8d84c500b5b83bf0eec06cd3707c23d19957f70354ac2394c9914e7
 
 build:
-  number: 0
-  skip: true  # [s390x]
+  number: 1
   run_exports:
     # no info.  Leaving at default behavior.
     - {{ pin_subpackage('jasper') }}
@@ -21,25 +20,17 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
-    - {{ cdt('mesa-libgl-devel') }}    # [linux]
-    - {{ cdt('mesa-dri-drivers') }}    # [linux]
-    - {{ cdt('libxdamage') }}          # [linux]
-    - {{ cdt('libselinux') }}          # [linux]
-    - {{ cdt('libxext') }}             # [linux]
-    - {{ cdt('libxfixes') }}           # [linux]
-    - {{ cdt('libxcb') }}              # [linux]
-    - {{ cdt('libxau') }}              # [linux]
-    - {{ cdt('libxi') }}               # [linux]
-    - {{ cdt('libxxf86vm') }}          # [linux]
     - cmake
     - ninja-base
     - pkg-config
   host:
     - jpeg {{ jpeg }}
-    - libglu 9.0.0                      # [linux]
-    - freeglut 3.4.0                    # [linux or win]
+    - libglu 9.0.3                      # [linux]
+    - freeglut {{ freeglut }}           # [linux or win]
+    # libgl-devel is needed for jiv to run on linux. 
+    - libgl-devel {{ libgl }}           # [linux]
   run:
-    - jpeg # pin through run_exports
+    - jpeg  # pin through run_exports
     - {{ pin_compatible('libglu') }}    # [linux]
     - {{ pin_compatible('freeglut') }}  # [linux or win]
 
@@ -61,6 +52,7 @@ test:
     - test -f $PREFIX/lib/libjasper.so.7.0.0                   # [linux]
     - jasper --version
     # Skip running jiv on linux platforms because freeglut fails to open display
+    - test -f $PREFIX/bin/jiv                                  # [linux]
     - jiv --version                                            # [win]
 
 about:
